force-app/main/default/objects/Doctor__c/fields/Check_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Time__c</fullName>
    <label>Check-In Time</label>
    <type>Time</type>
</CustomField>