force-app/main/default/objects/Doctor__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <label>Shift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning shift</fullName>
            </value>
            <value>
                <fullName>Afternoon shift</fullName>
            </value>
            <value>
                <fullName>Ningth shift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>