force-app/main/default/objects/Doctor__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DR.</fullName>
                <default>true</default>
                <label>DR.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>