force-app/main/default/objects/Doctor__c/recordTypes/Doctor_Specialist.recordType-meta.xml
<RecordType>
    <fullName>Doctor_Specialist</fullName>
    <active>true</active>
    <label>Doctor Specialist</label>
</RecordType>