force-app/main/default/objects/Doctor__c/recordTypes/General_Doctor.recordType-meta.xml
<RecordType>
    <fullName>General_Doctor</fullName>
    <active>true</active>
    <label>General Doctor</label>
</RecordType>