force-app/main/default/objects/Doctor__c/recordTypes/Marketing_Layout.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Layout</fullName>
    <active>true</active>
    <label>Marketing Layout</label>
</RecordType>